Bizfi Production/src/objects/Accounting_Calendar_Month__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <formula>TEXT(Month__c) +&apos;###&apos;+TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Date_Time__c</fullName>
        <label>Lock Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2040</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Accounting Calendar Month History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Accounting Calendar Month</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Locked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>Accounting</role>
            <role>Closer_Manager</role>
            <role>Commissions_Admin</role>
            <role>Development</role>
            <role>Funding_Desk_Manager</role>
            <role>Opener_Manager</role>
            <role>Renewals_Manager</role>
            <role>Sales_Executive</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>YEAR_2016</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Locked__c</columns>
        <columns>Lock_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Calendar Months</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>